--- a/style.css
+++ b/style.css
@@ -1,8 +1,12 @@
 body{
-   background: #CCCCCC
+
 }
 #banner{
   width: 100%;
+}
+.principal{
+  background: #CCCCCC
+  padding: 30px
 }
 h1{
   text-align: center
@@ -16,4 +20,24 @@ P{
 }
 em strong{
   color:#FF0000;
+}
+.itens{
+  font-style: italic;
+}
+.beneficios{
+  background: #ffffff;
+  padding: 20px;
+}
+h2{
+  text-align: center;
+}
+ul{
+  display: inline-block;
+  vertical-align: top;
+  width: 20%;
+  margin-right: 15%;
+
+}
+.imagembeneficios{
+  width: 50%;
 }
