--- a/style.css
+++ b/style.css
@@ -8,8 +8,11 @@ body{
   background: #CCCCCC
   padding: 30px
 }
-h1{
-  text-align: center
+.titulo-principal{
+  padding-left: 20px;
+}
+.titulo-centralizado{
+  text-align: center;
 }
 P{
   text-align: center;
@@ -28,9 +31,7 @@ em strong{
   background: #ffffff;
   padding: 20px;
 }
-h2{
-  text-align: center;
-}
+
 ul{
   display: inline-block;
   vertical-align: top;
