--- a/produtos.css
+++ b/produtos.css
@@ -66,3 +66,13 @@ nav a:hover{
     font-weight: bold;
     margin-top: 10px;
 }
+footer{
+    text-align: center;
+    background: url("bg.jpg");
+    padding: 40px 0;
+}
+.Copyright{
+    color: #ffffff;
+    font-size: 13px;
+    margin-top: 20px;
+}
