--- a/style.css
+++ b/style.css
@@ -1,44 +1,78 @@
-body{
+header {
+    background: #BBBBBB;
+    padding: 20px 0;
+}
+.caixa{
+    position: relative;
+    width: 940px;
+    margin: 0 auto;
+}
+nav{
+    position: absolute;
+    top: 110px;
+    right: 0;
+}
+nav li{
+    display: inline;
+    margin: 0 0 0 15px;
+}
+nav a{
+    text-transform: uppercase;
+    color: #000000;
+    font-weight: bold;
+    font-size: 22px;
+    text-decoration: none;
+}
+nav a:hover{
+    color: #C78C19;
+    text-decoration: underline;
+}
+.produtos{
+    width: 940px;
+    margin: 0 auto;
+    padding: 50px 0;
+}
+.produtos li{
+    display: inline-block;
+    text-align: center;
+    width: 30%;
+    vertical-align: top;
+    margin: 0 1.5%;
+    padding: 30px 20px;
+    box-sizing: border-box;
+    border:2px solid #000000;
+    border-radius: 10px;
+}
+.produtos li:hover{
+    border-color: #C78C19;
 
 }
-#banner{
-  width: 100%;
+.produtos li:active{
+    border-color: #088C19;
 }
-.principal{
-  background: #CCCCCC
-  padding: 30px;
-}
-.titulo-principal{
-  padding-left: 20px;
-}
-.titulo-centralizado{
-  text-align: center;
-}
-P{
-  text-align: center;
+.produtos li:hover h2{
+    font-size: 34px;
 
 }
-#missao{
-  font-size: 20px
+.produtos h2{
+    font-size: 30px;
+    font-weight: bold;
 }
-em strong{
-  color:#FF0000;
+.produto-descricao{
+    font-size: 18px;
 }
-.itens{
-  font-style: italic;
+.produto-preco{
+    font-size: 22px;
+    font-weight: bold;
+    margin-top: 10px;
 }
-.beneficios{
-  background: #ffffff;
-  padding: 20px;
+footer{
+    text-align: center;
+    background: url("bg.jpg");
+    padding: 40px 0;
 }
-
-ul{
-  display: inline-block;
-  vertical-align: top;
-  width: 20%;
-  margin-right: 15%;
-
-}
-.imagembeneficios{
-  width: 50%;
+.Copyright{
+    color: #ffffff;
+    font-size: 13px;
+    margin-top: 20px;
 }
