--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@ main{
 form{
     margin: 40px 0;
 }
-form label, form p{
+form label, form legend{
     display: block;
     font-size: 20px;
     margin: 0 0 10px;
@@ -97,4 +97,3 @@ form label, form p{
 .checkbox{
     margin: 20px 0;
 }
-
