--- a/style.css
+++ b/style.css
@@ -152,12 +152,9 @@ td, th{
     font-style: italic;
 }
 .utensilios{
-    width: 150px;
+    width: 120px;
     float: left;
     margin: 0 20px 2px 0;
-}
-.imagembeneficios{
-    width: 60%;
 }
 .mapa{
     padding: 3em 0;
@@ -166,7 +163,29 @@ td, th{
     margin: 0 0 2em;
     text-align: center;
 }
+.beneficios{
+    padding: 3em 0;
+}
+.conteudo-beneficios{
+    width: 640px;
+    margin: 0 auto;
+}
+.lista-beneficios{
+    width: 40%;
+    display: inline-block;
+    vertical-align: top;
+}
+.itens{
+    line-height: 1.5;
+}
+.itens:first-child{
+    font-weight: bold;
+}
+.imagem-beneficios{
+    width: 60%;
+}
+
 .video{
     width: 560px;
-    margin: 1em auto;
+    margin: 2em auto;
 }
