--- a/style.css
+++ b/style.css
@@ -139,6 +139,7 @@ td, th{
     font-size: 2em;
     margin: 0 0 1em;
     clear: left;
+    color: rgba(0,0,0,0.3);
 
 }
 
@@ -201,9 +202,28 @@ td, th{
 }
 .imagem-beneficios{
     width: 60%;
+    opacity: 1;
+}
+.imagem-beneficios:hover{
+    opacity: 0.3;
+    transition: 400ms;
+
 }
 
 .video{
     width: 560px;
     margin: 2em auto;
 }
+/* main > p{
+    background: red;
+}
+img + p{
+    background: blue;
+}
+img ~ p{
+    background: yellow;
+}
+
+.principal p:not(#missao){
+    background: orange;
+} */
