--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ nav a:hover{
     padding: 50px 0;
 }
 .produtos li{
+
     display: inline-block;
     text-align: center;
     width: 30%;
@@ -139,7 +140,8 @@ td, th{
     font-size: 2em;
     margin: 0 0 1em;
     clear: left;
-    color: rgba(0,0,0,0.3);
+    
+
 
 }
 
@@ -181,6 +183,8 @@ td, th{
     padding: 3em 0;
     background: #888888;
 
+
+
 }
 .conteudo-beneficios{
     width: 640px;
@@ -203,10 +207,12 @@ td, th{
 .imagem-beneficios{
     width: 60%;
     opacity: 1;
+    transition: 400ms;
+    box-shadow: 10px 10px 10px #000000;
 }
 .imagem-beneficios:hover{
     opacity: 0.3;
-    transition: 400ms;
+
 
 }
 
